# neosuggest

./: Cargo.toml  README.md
benches/: benchmarks.rs
src/: builder.rs  init.rs  main.rs  util.rs
src/sources/: basics.rs  corpus.rs  db.rs  mod.rs  path.rs  pwd.rs  zoxide.rs
