[package]
name = "neosuggest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
async-trait = "0.1.66"
common-path = "1.0.0"
futures = "0.3.26"
itertools = "0.10.5"
ngrammatic = "0.4.0"
rayon = "1.7.0"
tokio = { version = "1.26.0", features = ["full"] }
